@@ -1,5 +1,7 @@
 1.2.13.dev0
  * #100: Support for --stats command-line flag independent of --verbosity.
+ * #117: With borgmatic --init command-line flag, if a repository already exists, proceed without
+   erroring.
 
 1.2.12
  * #110: Support for Borg repository initialization via borgmatic --init command-line flag.
